Initial pass at website

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,1 +1,22 @@
 <script src="https://unpkg.com/htmx.org@1.9.12/dist/htmx.min.js"></script>
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrV2M7nU8lc2VGD_hNZvlVRwXsqK2NJfs&loading=async&libraries=maps,marker&v=beta"
+  defer
+></script>
+<link rel="stylesheet" href="/css/map.css" />
+<meta
+  name="title"
+  property="og:title"
+  content="Save the St Johns Community Center"
+/>
+<meta name="type" property="og:type" content="website" />
+<meta
+  name="image"
+  property="og:image"
+  content="https://savethesjcc.com/images/og-img.jpg"
+/>
+<meta
+  name="description"
+  property="og:description"
+  content="Voice your opposition to the selection of the St Johns Community Center for closure and keep up to date on the process"
+/>
