Dropping picture for now

--- a/layouts/shortcodes/mailchimp.html
+++ b/layouts/shortcodes/mailchimp.html
@@ -69,6 +69,7 @@
             value=""
           />
         </div>
+        <div hidden=""><input type="hidden" name="tags" value="6694239" /></div>
         <div id="mce-responses" class="clear">
           <div
             class="response"
